[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lib/lib.res" type="MeshLibrary" id=2]
[ext_resource path="res://Assets/life.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Hadfim.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://Scripts/main.gd" type="Script" id=6]
[ext_resource path="res://Assets/Img/gameover.png" type="Texture" id=7]
[ext_resource path="res://Scenes/CoinArea.tscn" type="PackedScene" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.623285, 1.27056, 0.657997 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.766178, 1.23919, 0.565714 )

[sub_resource type="Animation" id=3]
resource_name = "Smashed"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("RigidBody/Mesh/Pintainho:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.8, 0.8, 0.8 ), Vector3( 0.8, 0.2, 0.8 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 58
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "GameOver"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="BoxShape" id=7]
extents = Vector3( 32.7543, 4.07505, 1.81815 )

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="Scene" type="Spatial" parent="."]

[node name="GridMap" type="GridMap" parent="Scene"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 0, 0, 7, 1, 0, 7, 2, 0, 7, 3, 0, 7, 4, 0, 7, 5, 0, 7, 6, 0, 7, 7, 0, 7, 8, 0, 7, 9, 0, 7, 10, 0, 7, 11, 0, 7, 12, 0, 7, 13, 0, 7, 14, 0, 7, 15, 0, 7, 16, 0, 7, 65519, 0, 7, 65520, 0, 7, 65521, 0, 7, 65522, 0, 7, 65523, 0, 7, 65524, 0, 7, 65525, 0, 7, 65526, 0, 7, 65527, 0, 7, 65528, 0, 7, 65529, 0, 7, 65530, 0, 7, 65531, 0, 7, 65532, 0, 7, 65533, 0, 7, 65534, 0, 7, 65535, 0, 7, 0, 1, 11, 1, 1, 11, 2, 1, 11, 3, 1, 11, 4, 1, 11, 5, 1, 11, 6, 1, 11, 7, 1, 11, 8, 1, 11, 9, 1, 11, 10, 1, 11, 11, 1, 11, 12, 1, 11, 13, 1, 11, 14, 1, 11, 15, 1, 11, 16, 1, 11, 65519, 1, 11, 65520, 1, 11, 65521, 1, 11, 65522, 1, 11, 65523, 1, 11, 65524, 1, 11, 65525, 1, 11, 65526, 1, 11, 65527, 1, 11, 65528, 1, 11, 65529, 1, 11, 65530, 1, 11, 65531, 1, 11, 65532, 1, 11, 65533, 1, 11, 65534, 1, 11, 65535, 1, 11, 0, 2, 4, 1, 2, 12, 2, 2, 12, 3, 2, 12, 4, 2, 12, 5, 2, 12, 6, 2, 12, 7, 2, 5, 8, 2, 12, 9, 2, 12, 10, 2, 12, 11, 2, 12, 12, 2, 12, 13, 2, 12, 14, 2, 12, 15, 2, 12, 16, 2, 12, 65519, 2, 12, 65520, 2, 12, 65521, 2, 12, 65522, 2, 12, 65523, 2, 12, 65524, 2, 12, 65525, 2, 12, 65526, 2, 12, 65527, 2, 12, 65528, 2, 12, 65529, 2, 12, 65530, 2, 12, 65531, 2, 12, 65532, 2, 12, 65533, 2, 12, 65534, 2, 12, 65535, 2, 12, 0, 65515, 9, 1, 65515, 9, 2, 65515, 9, 3, 65515, 9, 4, 65515, 9, 5, 65515, 9, 6, 65515, 9, 7, 65515, 9, 8, 65515, 9, 9, 65515, 9, 10, 65515, 9, 11, 65515, 9, 12, 65515, 9, 13, 65515, 9, 14, 65515, 9, 15, 65515, 9, 16, 65515, 9, 65519, 65515, 9, 65520, 65515, 9, 65521, 65515, 9, 65522, 65515, 9, 65523, 65515, 9, 65524, 65515, 9, 65525, 65515, 9, 65526, 65515, 9, 65527, 65515, 9, 65528, 65515, 9, 65529, 65515, 9, 65530, 65515, 9, 65531, 65515, 9, 65532, 65515, 9, 65533, 65515, 9, 65534, 65515, 9, 65535, 65515, 9, 0, 65516, 9, 1, 65516, 9, 2, 65516, 9, 3, 65516, 9, 4, 65516, 9, 5, 65516, 9, 6, 65516, 9, 7, 65516, 9, 8, 65516, 9, 9, 65516, 9, 10, 65516, 9, 11, 65516, 9, 12, 65516, 9, 13, 65516, 9, 14, 65516, 9, 15, 65516, 9, 16, 65516, 9, 65519, 65516, 9, 65520, 65516, 9, 65521, 65516, 9, 65522, 65516, 9, 65523, 65516, 9, 65524, 65516, 9, 65525, 65516, 9, 65526, 65516, 9, 65527, 65516, 9, 65528, 65516, 9, 65529, 65516, 9, 65530, 65516, 9, 65531, 65516, 9, 65532, 65516, 9, 65533, 65516, 9, 65534, 65516, 9, 65535, 65516, 9, 0, 65517, 9, 1, 65517, 9, 2, 65517, 9, 3, 65517, 9, 4, 65517, 9, 5, 65517, 9, 6, 65517, 9, 7, 65517, 9, 8, 65517, 9, 9, 65517, 9, 10, 65517, 9, 11, 65517, 9, 12, 65517, 9, 13, 65517, 9, 14, 65517, 9, 15, 65517, 9, 16, 65517, 9, 65519, 65517, 9, 65520, 65517, 9, 65521, 65517, 9, 65522, 65517, 9, 65523, 65517, 9, 65524, 65517, 9, 65525, 65517, 9, 65526, 65517, 9, 65527, 65517, 9, 65528, 65517, 9, 65529, 65517, 9, 65530, 65517, 9, 65531, 65517, 9, 65532, 65517, 9, 65533, 65517, 9, 65534, 65517, 9, 65535, 65517, 9, 0, 65518, 10, 1, 65518, 10, 2, 65518, 10, 3, 65518, 10, 4, 65518, 10, 5, 65518, 10, 6, 65518, 10, 7, 65518, 10, 8, 65518, 10, 9, 65518, 10, 10, 65518, 10, 11, 65518, 10, 12, 65518, 10, 13, 65518, 10, 14, 65518, 10, 15, 65518, 10, 16, 65518, 10, 65519, 65518, 10, 65520, 65518, 10, 65521, 65518, 10, 65522, 65518, 10, 65523, 65518, 10, 65524, 65518, 10, 65525, 65518, 10, 65526, 65518, 10, 65527, 65518, 10, 65528, 65518, 10, 65529, 65518, 10, 65530, 65518, 10, 65531, 65518, 10, 65532, 65518, 10, 65533, 65518, 10, 65534, 65518, 10, 65535, 65518, 10, 0, 65519, 10, 1, 65519, 10, 2, 65519, 10, 3, 65519, 10, 4, 65519, 10, 5, 65519, 10, 6, 65519, 10, 7, 65519, 10, 8, 65519, 10, 9, 65519, 10, 10, 65519, 10, 11, 65519, 10, 12, 65519, 10, 13, 65519, 10, 14, 65519, 10, 15, 65519, 10, 16, 65519, 10, 65519, 65519, 10, 65520, 65519, 10, 65521, 65519, 10, 65522, 65519, 10, 65523, 65519, 10, 65524, 65519, 10, 65525, 65519, 10, 65526, 65519, 10, 65527, 65519, 10, 65528, 65519, 10, 65529, 65519, 10, 65530, 65519, 10, 65531, 65519, 10, 65532, 65519, 10, 65533, 65519, 10, 65534, 65519, 10, 65535, 65519, 10, 0, 65520, 12, 1, 65520, 12, 2, 65520, 12, 3, 65520, 12, 4, 65520, 12, 5, 65520, 4, 6, 65520, 12, 7, 65520, 12, 8, 65520, 12, 9, 65520, 12, 10, 65520, 12, 11, 65520, 12, 12, 65520, 12, 13, 65520, 12, 14, 65520, 12, 15, 65520, 12, 16, 65520, 12, 65519, 65520, 12, 65520, 65520, 12, 65521, 65520, 12, 65522, 65520, 12, 65523, 65520, 12, 65524, 65520, 12, 65525, 65520, 12, 65526, 65520, 12, 65527, 65520, 12, 65528, 65520, 12, 65529, 65520, 12, 65530, 65520, 12, 65531, 65520, 12, 65532, 65520, 12, 65533, 65520, 12, 65534, 65520, 12, 65535, 65520, 12, 0, 65521, 7, 1, 65521, 7, 2, 65521, 7, 3, 65521, 7, 4, 65521, 7, 5, 65521, 7, 6, 65521, 7, 7, 65521, 7, 8, 65521, 7, 9, 65521, 11, 10, 65521, 11, 11, 65521, 11, 12, 65521, 11, 13, 65521, 11, 14, 65521, 11, 15, 65521, 11, 16, 65521, 11, 65519, 65521, 11, 65520, 65521, 11, 65521, 65521, 11, 65522, 65521, 11, 65523, 65521, 11, 65524, 65521, 11, 65525, 65521, 11, 65526, 65521, 11, 65527, 65521, 7, 65528, 65521, 7, 65529, 65521, 7, 65530, 65521, 7, 65531, 65521, 7, 65532, 65521, 7, 65533, 65521, 7, 65534, 65521, 7, 65535, 65521, 7, 0, 65522, 6, 1, 65522, 6, 2, 65522, 6, 3, 65522, 6, 4, 65522, 6, 5, 65522, 6, 6, 65522, 6, 7, 65522, 6, 8, 65522, 6, 9, 65522, 6, 10, 65522, 6, 11, 65522, 6, 12, 65522, 6, 13, 65522, 6, 14, 65522, 6, 15, 65522, 6, 16, 65522, 6, 65519, 65522, 6, 65520, 65522, 6, 65521, 65522, 6, 65522, 65522, 6, 65523, 65522, 6, 65524, 65522, 6, 65525, 65522, 6, 65526, 65522, 6, 65527, 65522, 6, 65528, 65522, 6, 65529, 65522, 6, 65530, 65522, 6, 65531, 65522, 6, 65532, 65522, 6, 65533, 65522, 6, 65534, 65522, 6, 65535, 65522, 6, 0, 65523, 7, 1, 65523, 7, 2, 65523, 7, 3, 65523, 7, 4, 65523, 7, 5, 65523, 7, 6, 65523, 7, 7, 65523, 7, 8, 65523, 7, 9, 65523, 7, 10, 65523, 7, 11, 65523, 7, 12, 65523, 7, 13, 65523, 7, 14, 65523, 7, 15, 65523, 7, 16, 65523, 7, 65519, 65523, 7, 65520, 65523, 7, 65521, 65523, 7, 65522, 65523, 7, 65523, 65523, 7, 65524, 65523, 7, 65525, 65523, 7, 65526, 65523, 7, 65527, 65523, 7, 65528, 65523, 7, 65529, 65523, 7, 65530, 65523, 7, 65531, 65523, 7, 65532, 65523, 7, 65533, 65523, 7, 65534, 65523, 7, 65535, 65523, 7, 0, 65524, 11, 1, 65524, 11, 2, 65524, 11, 3, 65524, 11, 4, 65524, 11, 5, 65524, 11, 6, 65524, 11, 7, 65524, 11, 8, 65524, 2, 9, 65524, 11, 10, 65524, 11, 11, 65524, 11, 12, 65524, 11, 13, 65524, 11, 14, 65524, 11, 15, 65524, 11, 16, 65524, 11, 65519, 65524, 11, 65520, 65524, 11, 65521, 65524, 11, 65522, 65524, 11, 65523, 65524, 11, 65524, 65524, 11, 65525, 65524, 11, 65526, 65524, 11, 65527, 65524, 11, 65528, 65524, 11, 65529, 65524, 11, 65530, 65524, 11, 65531, 65524, 11, 65532, 65524, 11, 65533, 65524, 11, 65534, 65524, 11, 65535, 65524, 11, 0, 65525, 12, 1, 65525, 12, 2, 65525, 12, 3, 65525, 12, 4, 65525, 12, 5, 65525, 12, 6, 65525, 12, 7, 65525, 12, 8, 65525, 12, 9, 65525, 12, 10, 65525, 12, 11, 65525, 12, 12, 65525, 12, 13, 65525, 5, 14, 65525, 12, 15, 65525, 12, 16, 65525, 12, 65519, 65525, 12, 65520, 65525, 12, 65521, 65525, 12, 65522, 65525, 12, 65523, 65525, 12, 65524, 65525, 12, 65525, 65525, 12, 65526, 65525, 12, 65527, 65525, 12, 65528, 65525, 5, 65529, 65525, 12, 65530, 65525, 12, 65531, 65525, 12, 65532, 65525, 12, 65533, 65525, 12, 65534, 65525, 12, 65535, 65525, 12, 0, 65526, 7, 1, 65526, 7, 2, 65526, 7, 3, 65526, 7, 4, 65526, 7, 5, 65526, 7, 6, 65526, 7, 7, 65526, 7, 8, 65526, 7, 9, 65526, 7, 10, 65526, 7, 11, 65526, 7, 12, 65526, 7, 13, 65526, 7, 14, 65526, 7, 15, 65526, 7, 16, 65526, 7, 65519, 65526, 7, 65520, 65526, 7, 65521, 65526, 7, 65522, 65526, 7, 65523, 65526, 7, 65524, 65526, 7, 65525, 65526, 7, 65526, 65526, 7, 65527, 65526, 7, 65528, 65526, 7, 65529, 65526, 7, 65530, 65526, 7, 65531, 65526, 7, 65532, 65526, 7, 65533, 65526, 7, 65534, 65526, 7, 65535, 65526, 7, 0, 65527, 8, 1, 65527, 8, 2, 65527, 8, 3, 65527, 8, 4, 65527, 8, 5, 65527, 8, 6, 65527, 8, 7, 65527, 8, 8, 65527, 8, 9, 65527, 8, 10, 65527, 8, 11, 65527, 8, 12, 65527, 8, 13, 65527, 8, 14, 65527, 8, 15, 65527, 8, 16, 65527, 8, 65519, 65527, 8, 65520, 65527, 8, 65521, 65527, 8, 65522, 65527, 8, 65523, 65527, 8, 65524, 65527, 8, 65525, 65527, 8, 65526, 65527, 8, 65527, 65527, 8, 65528, 65527, 8, 65529, 65527, 8, 65530, 65527, 8, 65531, 65527, 8, 65532, 65527, 8, 65533, 65527, 8, 65534, 65527, 8, 65535, 65527, 8, 0, 65528, 7, 1, 65528, 7, 2, 65528, 7, 3, 65528, 7, 4, 65528, 7, 5, 65528, 7, 6, 65528, 7, 7, 65528, 7, 8, 65528, 7, 9, 65528, 7, 10, 65528, 7, 11, 65528, 7, 12, 65528, 7, 13, 65528, 7, 14, 65528, 7, 15, 65528, 7, 16, 65528, 7, 65519, 65528, 7, 65520, 65528, 7, 65521, 65528, 7, 65522, 65528, 7, 65523, 65528, 7, 65524, 65528, 7, 65525, 65528, 7, 65526, 65528, 7, 65527, 65528, 7, 65528, 65528, 7, 65529, 65528, 7, 65530, 65528, 7, 65531, 65528, 7, 65532, 65528, 7, 65533, 65528, 7, 65534, 65528, 7, 65535, 65528, 7, 0, 65529, 11, 1, 65529, 11, 2, 65529, 11, 3, 65529, 11, 4, 65529, 11, 5, 65529, 11, 6, 65529, 11, 7, 65529, 11, 8, 65529, 11, 9, 65529, 11, 10, 65529, 11, 11, 65529, 11, 12, 65529, 11, 13, 65529, 11, 14, 65529, 11, 15, 65529, 11, 16, 65529, 11, 65519, 65529, 11, 65520, 65529, 11, 65521, 65529, 11, 65522, 65529, 11, 65523, 65529, 11, 65524, 65529, 11, 65525, 65529, 11, 65526, 65529, 11, 65527, 65529, 11, 65528, 65529, 11, 65529, 65529, 11, 65530, 65529, 11, 65531, 65529, 11, 65532, 65529, 11, 65533, 65529, 11, 65534, 65529, 11, 65535, 65529, 11, 0, 65530, 12, 1, 65530, 12, 2, 65530, 4, 3, 65530, 12, 4, 65530, 12, 5, 65530, 12, 6, 65530, 12, 7, 65530, 5, 8, 65530, 12, 9, 65530, 12, 10, 65530, 12, 11, 65530, 12, 12, 65530, 12, 13, 65530, 12, 14, 65530, 12, 15, 65530, 12, 16, 65530, 12, 65519, 65530, 12, 65520, 65530, 12, 65521, 65530, 12, 65522, 65530, 12, 65523, 65530, 12, 65524, 65530, 12, 65525, 65530, 12, 65526, 65530, 12, 65527, 65530, 12, 65528, 65530, 12, 65529, 65530, 5, 65530, 65530, 12, 65531, 65530, 12, 65532, 65530, 12, 65533, 65530, 12, 65534, 65530, 12, 65535, 65530, 12, 0, 65531, 11, 1, 65531, 11, 2, 65531, 11, 3, 65531, 11, 4, 65531, 11, 5, 65531, 11, 6, 65531, 11, 7, 65531, 11, 8, 65531, 11, 9, 65531, 11, 10, 65531, 11, 11, 65531, 11, 12, 65531, 11, 13, 65531, 11, 14, 65531, 2, 15, 65531, 11, 16, 65531, 11, 65519, 65531, 11, 65520, 65531, 11, 65521, 65531, 2, 65522, 65531, 11, 65523, 65531, 11, 65524, 65531, 11, 65525, 65531, 11, 65526, 65531, 11, 65527, 65531, 11, 65528, 65531, 11, 65529, 65531, 11, 65530, 65531, 11, 65531, 65531, 11, 65532, 65531, 11, 65533, 65531, 11, 65534, 65531, 11, 65535, 65531, 11, 0, 65532, 12, 1, 65532, 12, 2, 65532, 12, 3, 65532, 12, 4, 65532, 12, 5, 65532, 12, 6, 65532, 12, 7, 65532, 12, 8, 65532, 12, 9, 65532, 12, 10, 65532, 12, 11, 65532, 12, 12, 65532, 12, 13, 65532, 12, 14, 65532, 12, 15, 65532, 12, 16, 65532, 12, 65519, 65532, 12, 65520, 65532, 12, 65521, 65532, 12, 65522, 65532, 12, 65523, 65532, 12, 65524, 65532, 12, 65525, 65532, 12, 65526, 65532, 12, 65527, 65532, 12, 65528, 65532, 12, 65529, 65532, 12, 65530, 65532, 4, 65531, 65532, 12, 65532, 65532, 12, 65533, 65532, 12, 65534, 65532, 12, 65535, 65532, 4, 0, 65533, 11, 1, 65533, 11, 2, 65533, 11, 3, 65533, 11, 4, 65533, 11, 5, 65533, 11, 6, 65533, 11, 7, 65533, 11, 8, 65533, 11, 9, 65533, 11, 10, 65533, 11, 11, 65533, 11, 12, 65533, 11, 13, 65533, 11, 14, 65533, 11, 15, 65533, 11, 16, 65533, 11, 65519, 65533, 11, 65520, 65533, 11, 65521, 65533, 11, 65522, 65533, 11, 65523, 65533, 11, 65524, 65533, 11, 65525, 65533, 11, 65526, 65533, 11, 65527, 65533, 11, 65528, 65533, 11, 65529, 65533, 11, 65530, 65533, 11, 65531, 65533, 11, 65532, 65533, 11, 65533, 65533, 11, 65534, 65533, 11, 65535, 65533, 11, 0, 65534, 7, 1, 65534, 7, 2, 65534, 7, 3, 65534, 7, 4, 65534, 7, 5, 65534, 7, 6, 65534, 7, 7, 65534, 7, 8, 65534, 7, 9, 65534, 7, 10, 65534, 7, 11, 65534, 7, 12, 65534, 7, 13, 65534, 7, 14, 65534, 7, 15, 65534, 7, 16, 65534, 7, 65519, 65534, 7, 65520, 65534, 7, 65521, 65534, 7, 65522, 65534, 7, 65523, 65534, 7, 65524, 65534, 7, 65525, 65534, 7, 65526, 65534, 7, 65527, 65534, 7, 65528, 65534, 7, 65529, 65534, 7, 65530, 65534, 7, 65531, 65534, 7, 65532, 65534, 7, 65533, 65534, 7, 65534, 65534, 7, 65535, 65534, 7, 0, 65535, 8, 1, 65535, 8, 2, 65535, 8, 3, 65535, 8, 4, 65535, 8, 5, 65535, 8, 6, 65535, 8, 7, 65535, 8, 8, 65535, 8, 9, 65535, 8, 10, 65535, 8, 11, 65535, 8, 12, 65535, 8, 13, 65535, 8, 14, 65535, 8, 15, 65535, 8, 16, 65535, 8, 65519, 65535, 8, 65520, 65535, 8, 65521, 65535, 8, 65522, 65535, 8, 65523, 65535, 8, 65524, 65535, 8, 65525, 65535, 8, 65526, 65535, 8, 65527, 65535, 8, 65528, 65535, 8, 65529, 65535, 8, 65530, 65535, 8, 65531, 65535, 8, 65532, 65535, 8, 65533, 65535, 8, 65534, 65535, 8, 65535, 65535, 8 )
}
__meta__ = {
"_edit_group_": true,
"_editor_clip_": 0
}

[node name="Player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.31234, 1.72379, 5.06754 )
script = ExtResource( 5 )

[node name="RigidBody" type="RigidBody" parent="Player"]
mode = 2
mass = 13.0
gravity_scale = 9.8
can_sleep = false

[node name="Mesh" parent="Player/RigidBody" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0276036, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Player/RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.717635, -0.0634141 )
shape = SubResource( 1 )

[node name="PlayerArea" type="Area" parent="Player/RigidBody"]

[node name="CollisionShape" type="CollisionShape" parent="Player/RigidBody/PlayerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.10421, 0.814132, 0.0184522 )
shape = SubResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="Player"]
anims/Smashed = SubResource( 3 )

[node name="Sign" type="Node2D" parent="."]

[node name="Score" type="Label" parent="Sign"]
margin_left = 922.382
margin_top = 64.164
margin_right = 962.379
margin_bottom = 111.164
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cdr" type="Label" parent="Sign"]
margin_left = 500.441
margin_top = 164.164
margin_right = 540.441
margin_bottom = 220.164
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="Sign"]
position = Vector2( 91.5689, 114.164 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="Sign"]
position = Vector2( 141.569, 114.164 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="3" type="Sprite" parent="Sign"]
position = Vector2( 191.569, 114.164 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Camera Position" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Camera Position"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 5.164, 14.16, 10.626 )
h_offset = -4.056
fov = 49.4

[node name="Car Position" type="Node" parent="."]

[node name="Car 1" type="Position3D" parent="Car Position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 2, 0.903 )

[node name="Car 2" type="Position3D" parent="Car Position"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 20.74, 2, -2.561 )

[node name="Car 3" type="Position3D" parent="Car Position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 2, -15.2774 )

[node name="Car 4" type="Position3D" parent="Car Position"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 20.74, 2, -18.0118 )

[node name="Train" type="Position3D" parent="Car Position"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 34.475, 2, -26.99 )

[node name="Spawn 1" type="Timer" parent="Car Position"]
autostart = true

[node name="Train Spawn" type="Timer" parent="Car Position"]
wait_time = 8.0
autostart = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.0271517, -0.147153, -0.988741, 0.00403944, 0.989114, -0.147098, 0.999623, -4.65837e-10, 0.0274505, -3.85964, 5.58022, -3.11195 )
light_energy = 0.5
light_specular = 0.0
shadow_enabled = true

[node name="Calls" type="Node2D" parent="."]

[node name="GameOver" type="Sprite" parent="Calls"]
position = Vector2( 500.441, 416.036 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 7 )

[node name="Anim" type="AnimationPlayer" parent="Calls"]
anims/GameOver = SubResource( 6 )

[node name="Coins" type="Node" parent="."]

[node name="Coin" type="Spatial" parent="Coins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.794012, 0 )

[node name="CoinArea" parent="Coins/Coin" instance=ExtResource( 9 )]
transform = Transform( 9.55343e-16, 4.37114e-09, 0.5, 0.5, -4.37114e-09, 0, 2.18557e-08, 0.1, -2.18557e-08, 3.7336, 3.35983, -4.85722 )

[node name="Coin2" type="Spatial" parent="Coins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.77171, 0.794012, -4.13252 )

[node name="CoinArea" parent="Coins/Coin2" instance=ExtResource( 9 )]
transform = Transform( 9.55343e-16, 4.37114e-09, 0.5, 0.5, -4.37114e-09, 0, 2.18557e-08, 0.1, -2.18557e-08, 3.7336, 3.35983, -4.85722 )

[node name="Coin3" type="Spatial" parent="Coins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.79623, 0.794012, -14.9205 )

[node name="CoinArea" parent="Coins/Coin3" instance=ExtResource( 9 )]
transform = Transform( 9.55343e-16, 4.37114e-09, 0.5, 0.5, -4.37114e-09, 0, 2.18557e-08, 0.1, -2.18557e-08, 3.7336, 3.35983, -4.85722 )

[node name="Coin4" type="Spatial" parent="Coins"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.58138, 0.794012, -14.9205 )

[node name="CoinArea" parent="Coins/Coin4" instance=ExtResource( 9 )]
transform = Transform( 9.55343e-16, 4.37114e-09, 0.5, 0.5, -4.37114e-09, 0, 2.18557e-08, 0.1, -2.18557e-08, 3.7336, 3.35983, -4.85722 )

[node name="End" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -37.9788 )

[node name="CollisionShape" type="CollisionShape" parent="End"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.666706, 1.31875, 3.99231 )
shape = SubResource( 7 )

[connection signal="area_entered" from="Player/RigidBody/PlayerArea" to="." method="_on_Area_area_entered"]
[connection signal="animation_finished" from="Player/Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="timeout" from="Car Position/Spawn 1" to="." method="_on_Spawn_1_timeout"]
[connection signal="timeout" from="Car Position/Train Spawn" to="." method="_on_Train_Spawn_timeout"]
[connection signal="area_entered" from="End" to="." method="_on_End_area_entered"]

[editable path="Player/RigidBody/Mesh"]
